syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

// DeductionService provides gRPC APIs for deduction rule and deduction management
service DeductionService {
  // CreateDeductionRule creates a new deduction rule
  rpc CreateDeductionRule(CreateDeductionRuleRequest) returns (DeductionRuleResponse);
  
  // GetDeductionRule retrieves a deduction rule by ID
  rpc GetDeductionRule(GetDeductionRuleRequest) returns (DeductionRuleResponse);
  
  // ListDeductionRules lists all deduction rules with optional filters
  rpc ListDeductionRules(ListDeductionRulesRequest) returns (DeductionRulesResponse);
  
  // ApplyDeductions applies deductions to a stipend
  rpc ApplyDeductions(ApplyDeductionsRequest) returns (DeductionsResponse);
  
  // CreateDeduction creates a new deduction record
  rpc CreateDeduction(CreateDeductionRequest) returns (DeductionResponse);
  
  // GetDeduction retrieves a deduction by ID
  rpc GetDeduction(GetDeductionRequest) returns (DeductionResponse);
  
  // GetStipendDeductions retrieves all deductions for a stipend
  rpc GetStipendDeductions(GetStipendDeductionsRequest) returns (DeductionsResponse);
  
  // GetStudentDeductions retrieves all deductions for a student
  rpc GetStudentDeductions(GetStudentDeductionsRequest) returns (DeductionsResponse);
}

// CreateDeductionRuleRequest represents a request to create a deduction rule
message CreateDeductionRuleRequest {
  string rule_name = 1;
  string deduction_type = 2;
  double default_amount = 3;
  double min_amount = 4;
  double max_amount = 5;
  string frequency = 6;
  bool is_mandatory = 7;
  string applicable_to = 8;
  int32 priority = 9;
  string description = 10;
}

// DeductionRuleResponse represents a deduction rule
message DeductionRuleResponse {
  string id = 1;
  string rule_name = 2;
  string deduction_type = 3;
  double default_amount = 4;
  double min_amount = 5;
  double max_amount = 6;
  string frequency = 7;
  bool is_mandatory = 8;
  string applicable_to = 9;
  int32 priority = 10;
  string description = 11;
  int64 created_at = 12; // Unix timestamp
  int64 modified_at = 13; // Unix timestamp
}

// GetDeductionRuleRequest represents a request to get a deduction rule
message GetDeductionRuleRequest {
  string rule_id = 1;
}

// ListDeductionRulesRequest represents a request to list deduction rules
message ListDeductionRulesRequest {
  string deduction_type = 1;
  string frequency = 2;
  int32 limit = 3;
  int32 offset = 4;
}

// DeductionRulesResponse represents a collection of deduction rules
message DeductionRulesResponse {
  repeated DeductionRuleResponse rules = 1;
  int32 total = 2;
}

// DeductionDetail represents a single deduction
message DeductionDetail {
  string rule_id = 1;
  string rule_name = 2;
  string deduction_type = 3;
  double amount = 4;
  string description = 5;
  bool is_optional = 6;
}

// ApplyDeductionsRequest represents a request to apply deductions to a stipend
message ApplyDeductionsRequest {
  string stipend_id = 1;
  string student_id = 2;
  double base_amount = 3;
}

// DeductionsResponse represents the result of applying deductions
message DeductionsResponse {
  double base_amount = 1;
  double total_deductions = 2;
  double net_amount = 3;
  repeated DeductionDetail deductions = 4;
}

// CreateDeductionRequest represents a request to create a deduction
message CreateDeductionRequest {
  string stipend_id = 1;
  string rule_id = 2;
  double amount = 3;
}

// DeductionResponse represents a deduction record
message DeductionResponse {
  string id = 1;
  string stipend_id = 2;
  string rule_id = 3;
  double amount = 4;
  int64 created_at = 5; // Unix timestamp
}

// GetDeductionRequest represents a request to get a deduction
message GetDeductionRequest {
  string deduction_id = 1;
}

// GetStipendDeductionsRequest represents a request to get all deductions for a stipend
message GetStipendDeductionsRequest {
  string stipend_id = 1;
}

// GetStudentDeductionsRequest represents a request to get all deductions for a student
message GetStudentDeductionsRequest {
  string student_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}
